[package]
name = "unwrap_or_do"
version = "0.1.0"
edition = "2021"
authors = ["WS. Jing"]
description = "Unwrap the Result or do an expression followed by returning the result"
license = "MIT"
repository = "https://github.com/remme123/unwrap_or_do"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
std = []