[package]
name = "unwrap_or_do"
version = "0.1.2"
edition = "2021"
description = "Unwrap the Result or do an expression followed by returning the result"
documentation = "https://docs.rs/unwrap_or_do"
license = "MIT"
keywords = ["unwrap", "unwrap_err"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
std = []